new-site/docs-site/content/0.19.0/guide/ranking-and-relevance.md
# Ranking and Relevance

Typesense ranks search results using a simple tie-breaking sorting algorithm that can rely on one or more of:

1. Text match score, exposed as a special ` _text_match` field.
2. User-defined indexed numerical fields.

### Text match score
The text match score is computed based on the following metrics:

1. **Frequency**: Number of tokens overlapping between the search query and a text field. Documents that have more overlapping tokens will be ranked above those with lesser overlapping tokens.
2. **Edit distance**: If a given token in the query is not found, we look at tokens that are within an edit distance of num_typos characters from the query tokens. Documents that contain the tokens in the query exactly are ranked higher than those containing tokens with larger edit distances.
3. **Proximity**: Whether the query tokens appear verbatim or interspersed with other tokens in the field. Documents in which the query tokens appear right next to each other will be ranked above documents where the query tokens exist but are far apart in a text field.
4. **Ordering of query_by fields**: A document that matches on a field earlier in the list of `query_by` fields is considered more relevant than a document matched on a field later in the list.

Based on the above metrics, Typesense calculates a `_text_match` score for ranking the documents on text relevance.

However, there will be cases when many documents contain the exact tokens in a search query. In such a case, their `_text_match` will also be the same. That's when user-defined indexed numerical fields can be used to break the tie. You can specify up to two such numerical fields.

For example, let's say that we're searching for books with a query like `short story`. If there are multiple books containing these exact words, then all those documents would have the same text match score.

To break the tie, we could specify up to two additional `sort_by` fields. For instance, we could say:

`sort_by=_text_match:desc,average_rating:desc,publication_year:desc`

This would sort the results in the following manner:

1. All matching records are sorted by their text match score.
2. If any two document share the same text match score, sort them by average rating.
3. If there is still a tie, sort them by their year of publication.
<br>

### Default ranking order
When you don't provide a `sort_by` parameter to your search request, the documents will be ranked on the text match score and default sorting field values:

`sort_by=_text_match:desc,default_sorting_field:desc`

### Strict ordering of results on a numerical field
If you wish to sort the documents strictly by an indexed numerical field like `price`, you can just move the text match score criteria after the `price` field as follows:

`sort_by=price:desc,_text_match:desc`

## High Availability
You can run a cluster of Typesense nodes for high availability. Typesense uses the Raft consensus algorithm to manage the cluster and recover from node failures.

Since Raft requires a quorum of nodes for consensus, you need to run a ***minimum of 3 nodes*** to tolerate a 1-node failure. Running a 5-node cluster will tolerate failures of up to 2 nodes, but at the expense of higher write latencies.

Therefore, we recommend running a 3-node Typesense cluster.

**Configuring a Typesense cluster**

To start a Typesense node as part of a cluster, use the `--nodes` argument to point to a file that contains a comma separated string of all nodes in the cluster.

Each node definition should be in the following format:

`<ip_address>:<peering_port>:<api_port>`

Example content of a `--nodes` file for a 3-node cluster:

<Tabs :tabs="['Config']">
  <template v-slot:Config>

```
192.168.12.1:8107:8108,192.168.12.2:8107:8108,192.168.12.3:8107:8108
```

  </template>
</Tabs>

In the example above, the peering port (i.e. the port used for cluster operations) is `8107` and the API port (the actual port to which clients connect to) is `8108`.

**Client configuration**

Typesense clients allow you to specify one or more nodes during client initialization.

Client libraries will load balance reads and writes across all nodes and will automatically strive to recover from transient failures through built-in retries.

Here's a sample 3-node client configuration:

<Tabs :tabs="['Ruby','Python','JavaScript']">
  <template v-slot:Ruby>

```rb
require 'typesense'

client = Typesense::Client.new(
  nodes: [
    {
      host:     '192.168.0.50',
      port:     443,
      protocol: 'https'
    },
    {
      host:     '192.168.0.51',
      port:     443,
      protocol: 'https'
    },
    {
      host:     '192.168.0.52',
      port:     443,
      protocol: 'https'
    }
  ],
  api_key:  '<API_KEY>',
  connection_timeout_seconds: 2
)
```

  </template>
  <template v-slot:Python>

```py
import typesense

client = typesense.Client({
  'nodes': [
    {
      host:     '192.168.0.50',
      port:     443,
      protocol: 'https'
    },
    {
      host:     '192.168.0.51',
      port:     443,
      protocol: 'https'
    },
    {
      host:     '192.168.0.52',
      port:     443,
      protocol: 'https'
    }
  ],
  'api_key': '<API_KEY>',
  'connection_timeout_seconds': 2
})
```

  </template>
  <template v-slot:JavaScript>

```js
let client = new Typesense.Client({
  'nodes': [
    {
      host:     '192.168.0.50',
      port:     443,
      protocol: 'https'
    },
    {
      host:     '192.168.0.51',
      port:     443,
      protocol: 'https'
    },
    {
      host:     '192.168.0.52',
      port:     443,
      protocol: 'https'
    }
  ],
  'apiKey': '<API_KEY>',
  'connectionTimeoutSeconds': 2
})
```

  </template>
</Tabs>
